# psychotherapy-model

./: .gitignore  Dockerfile  README.md  data.dvc  pyproject.toml
.dvc/: config
.github/workflows/: psy-model.yml  start-runner.ps1
k8s/: deploy.yml  secrets.yml
src/drift-detection/: data_drift_detector.ipynb
src/fine-tuning/: .gitignore  psy_ai_huggingface_model_registry_demo.ipynb  psy_model_fine_tuning.py
