[project]
name = "psy-model"
version = "0.1.0"
description = "AI Psychotherapy Model"
authors = [
    { name = "Vitaliy Sharandin", email = "vitaliy.sharandin@gmail.com" },
]
requires-python = ">=3.12"

dependencies = [
    "gradio==5.9.1",
    "datasets==3.2.0",
    "bitsandbytes==0.45.0",
    "transformers==4.47.1",
    "peft==0.14.0",
    "accelerate==1.2.1",
    "trl==0.13.0",
    "evaluate==0.4.3",
    "rouge_score==0.1.2",
    "optuna==4.1.0",
    "ipykernel==6.15.2",
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "nbconvert==7.16.6",
    "dvc==3.59.0",
    "mlflow==2.20.1"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["psy-model"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff]
line-length = 120
